# RadioStats

./: .gitignore  app.py  basemodel.py  channelInfo.py  color.py  create.py  fetch.py  models.py  pyproject.toml  requirements.txt  server.py  sitemap.py  spotify.py  update_channels.py  utils.py
parser/: __init__.py  aas.py  ara.py  base.py  eng.py  kronehit.py  orf.py
web/: .babelrc  .eslintrc.json  App.vue  DetailView.vue  Info.vue  List.vue  MatomoTracker.js  MatomoTracker.ts  custom.d.ts  index.html  main.js  main.ts  my-index.ejs  package-lock.json  package.json  routes.js  routes.ts  sentry.properties  snowpack.config.js  store.js  store.ts  tsconfig.json  upload.sh  variables.scss  vite.config.js  vue-head.d.ts  vuejs-datepicker.d.ts  webpack.config.js  workaroundPlugin.js
web/public/: index.html
web/src/: App.vue  DetailView.vue  Info.vue  List.vue  MatomoTracker.js  color.js  index.js  routes.js  routes.ts  utils.js  utils.ts  variables.scss
