[tool.poetry]
name = "radio"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.22.0"
Flask = "^1.1.1"
Flask-Caching = "^1.8.0"
sentry-sdk = {extras = ["flask"], version = "^0.17.1"}
spotipy = "^2.4.4"
peewee = "^3.13.1"
beautifulsoup4 = "^4.8.2"
PyMySQL = "^0.10.0"
pytz = "^2020.1"
gunicorn = "^20.0.4"
redis = "^3.3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
