[tool.poetry]
name = "radio"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.22.0"
Flask = "^2.0.0"
Flask-Caching = "^1.8.0"
sentry-sdk = {extras = ["flask"], version = "^1.1.0"}
spotipy = "2.16.0"
peewee = "^3.13.1"
beautifulsoup4 = "^4.8.2"
PyMySQL = "^1.0.2"
pytz = "^2021.1"
gunicorn = "^20.0.4"
redis = "^3.3.11"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
