[tool.poetry]
name = "radio"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "^2.22.0"
Flask = "^3.0.0"
Flask-Caching = "^2.0.1"
sentry-sdk = {extras = ["flask"], version = "^1.1.0"}
spotipy = "^2.16.0"
peewee = "^3.13.1"
beautifulsoup4 = "^4.8.2"
pytz = "^2023.3"
gunicorn = "^21.2.0"
redis = "^5.0.0"
psycopg2 = "^2.9.2"
websocket-client = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
